--- a/sytle.css
+++ b/sytle.css
@@ -7,10 +7,12 @@ h1
 {
     color: green;
     text-align: center;
+    font-family:  "Sofadi One";
 }
 h2
 {
     color: rebeccapurple;
+    font-family: cursive;
 }
 h4
 {
@@ -30,5 +32,11 @@ ul {
 li {
     margin-left: 0; /* Ensures the text aligns properly */
 }
-
+li
+ {
+    font-family: "Sofadi One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 
